# flux

./: .gitignore  Cargo.toml  README.md  TODO.md  mac-setup.sh  test_scene.yml
flux/: Cargo.toml
flux-core/: Cargo.toml
flux-core/src/: engine.rs  lib.rs  sampling.rs  scene.rs
flux-node/: Cargo.toml
flux-node/src/: main.rs
flux/src/: main.rs
fluxcore/: Cargo.toml
fluxcore/src/: brdf.rs  color.rs  common.rs  constants.rs  debug.rs  engine.rs  image.rs  job.rs  lib.rs  manager.rs  materials.rs  sampling.rs  scene.rs  shapes.rs  trace.rs  workers.rs
sampler-debug/: Cargo.toml
sampler-debug/src/: main.rs
samplers/: Cargo.toml
samplers/src/: lib.rs
scenes/: demo1.yml  demo2.yml
