[package]
name = "flux"
version = "0.1.0"
authors = ["Jonathan Daugherty <cygnus@foobox.com>"]
edition = "2018"

[dependencies]
samplers = { path = "../samplers" }
fluxcore = { path = "../fluxcore" }
nalgebra = "0.16.5"
clap = "2.32"
serde_yaml = "0.8"
num_cpus = "1.9"

[dependencies.sdl2]
version = "0.31.0"
default-features = false
features = ["image"]
