[package]
name = "fluxcore"
version = "0.1.0"
authors = ["Jonathan Daugherty <cygnus@foobox.com>"]
edition = "2018"

[dependencies]
rand = "0.5.5"
samplers = { path = "../samplers" }
crossbeam = "0.5.0"
rayon = "1.0.3"
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.9"

[dependencies.nalgebra]
version = "0.16.5"
features = ["serde-serialize"]
